# ponte_nexus

./: .anvil_editor.yaml  .env.example  .gitignore  Pipfile  README.md  SKILLS.md  alembic.ini  anvil.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.ai/agents/: product-specialist.agent.md  software-engineer.agent.md
.ai/prompts/: bugfix.prompt.md  code-review.prompt.md  dashboard_improvement.prompt.md  feature.prompt.md  refactor.prompt.md
.github/: copilot-instructions.md
.streamlit/: config.toml
app/: export.py  streamlit_app.py  ui.py
app/pages/: 00_home.py  00_login.py  01_dashboard_geral.py  02_fluxo_pf_pj.py  03_distribuicao_renda.py  04_investimentos_pf_pj.py  05_importacao_dados.py  06_lancamentos.py  07_novo_lancamento.py  08_painel_pessoal.py  09_ajuda.py  10_orcamento.py  11_fontes_renda.py  12_planos.py  13_contas.py  14_entidades.py  15_compartilhamento.py  16_admin.py  __init__.py
data/: ponte_nexus.db
data/raw/: sample_valid.csv
data/samples/: sample_invalid.csv  sample_valid.csv  sample_valid.json  sample_valid.xlsx.note.txt
docs/: architecture.md  dashboard.md  data_ingestion.md  data_model.md  development.md  roadmap.md  todo-system-improvements.md  ux-priorities.md
docs/decisions/: 001-streamlit-choice.md
migrations/: env.py
migrations/versions/: 011a403fd225_initial_schema.py  2f2cd02a416a_add_owner_id_to_all_tables.py  60bfb260000a_add_account_type_is_active_description.py  (+3 more)
pages/: 1_Resumo.py  2_Fluxo_de_Caixa.py  3_Categorias.py  4_Importacao.py
scripts/: set_plan.py
src/: __init__.py
tests/: conftest.py
(+64 files in other folders)
